clusters/k3s/apps/downloads/sabnzbd/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: docker-services
spec:
  type: ClusterIP
  ports:
    - port: 8082
      targetPort: 8082
      protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: sabnzbd
  namespace: docker-services
  labels:
    kubernetes.io/service-name: sabnzbd
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.1.40
ports:
  - port: 8082
    protocol: TCP
